Translate entire extension to English for Chrome Web Store
- Translated all UI elements from Russian to English
- Updated popup.html: 'Page URL' and 'Take Screenshot' button
- Updated popup.js: all status messages in English
- Updated manifest.json description to English
- Translated all code comments to English
- Ready for international Chrome Web Store submission

--- a/popup.html
+++ b/popup.html
@@ -8,11 +8,11 @@
     <div class="container">
         <h3>Screenshot Tool</h3>
         <div class="input-group">
-            <label for="url-input">URL страницы:</label>
+            <label for="url-input">Page URL:</label>
             <input type="url" id="url-input" placeholder="https://example.com" required>
         </div>
         <div class="button-group">
-            <button id="screenshot-btn" class="btn primary">Сделать скриншот</button>
+            <button id="screenshot-btn" class="btn primary">Take Screenshot</button>
         </div>
         <div id="status" class="status"></div>
     </div>
